syntax = "proto3";

package requestsautomation;


//TODO delete db
service User {
  rpc ConfReload(UserRequest) returns (ConfigResponse);
  rpc GenList(UserRequest) returns (UserResponse);
  rpc DbDelete(UserRequest) returns (UserResponse);
  rpc ProvTasks(UserRequest) returns (ListResponse);
  rpc ProvAction(ProvAcionRequest) returns (ListResponse);
}
enum ActionType
{   // whatever contents...
    retry = 0;
    bar = 1;
}
message UserRequest {
  int64 a = 1;
  int64 b = 2;
}

message ProvAcionRequest {  ActionType action  = 1;}

message ListResponse { repeated string result = 4 ; }

message UserResponse { int64 result = 1; }

message ConfigResponse { string result = 1; }

/* service Admin {
  rpc GetRequestCount(GetCountRequest) returns (CounterResponse);
} */

/* message GetCountRequest {}

message CounterResponse { uint64 count = 1; } */
